[package]
name = "metrics_collector"
version = "0.1.0"
edition = "2024"

[dependencies]
flate2 = { version = "1.1.2",features = ["zlib"] }
clap = { version = "4.5.17", features = ["derive"] }
rayon = "1.11.0"
crossbeam-channel = "0.5.15"

# https://lf-hyperledger.atlassian.net/wiki/spaces/BESU/pages/22156632/Reduce+Memory+usage+by+choosing+a+different+low+level+allocator
[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"
